@@ -1,6 +1,4 @@
-// Copyright 2020-2025 The NATS Authors
-//
-// Modifications Copyright 2025-2026 Synadia Communications, Inc.
+// Copyright 2020-2026 The NATS Authors
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -20,6 +18,7 @@ import org.apache.commons.codec.binary.Base64;
 import org.jspecify.annotations.NonNull;
 import org.jspecify.annotations.Nullable;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
@@ -305,7 +304,7 @@ public abstract class Encoding {
      * @param source the input
      * @return the decoded URI
      */
-    public static String uriDecode(@NonNull String source) {
-        return URLDecoder.decode(source.replace("+", "%2B"), StandardCharsets.UTF_8);
+    public static String uriDecode(@NonNull String source) throws UnsupportedEncodingException {
+        return URLDecoder.decode(source.replace("+", "%2B"), StandardCharsets.UTF_8.name());
     }
 }
